vezbe/V7/vezbe7-vezbanje/code-gen/micko.output
Terminals unused in grammar

   _MINUSMINUS


Grammar

    0 $accept: program $end

    1 program: globalna_list function_list

    2 globalna_list: %empty
    3              | globalna_list globalna_var

    4 globalna_var: type _ID _SEMICOLON

    5 inc_statement: _ID _PLUSPLUS _SEMICOLON

    6 function_list: function
    7              | function_list function

    8 $@1: %empty

    9 function: type _ID $@1 _LPAREN parameter _RPAREN body

   10 type: _TYPE

   11 parameter: %empty
   12          | type _ID

   13 $@2: %empty

   14 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   15 variable_list: %empty
   16              | variable_list variable

   17 variable: type _ID _SEMICOLON

   18 statement_list: %empty
   19               | statement_list statement

   20 statement: compound_statement
   21          | assignment_statement
   22          | if_statement
   23          | return_statement
   24          | inc_statement

   25 compound_statement: _LBRACKET statement_list _RBRACKET

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   27 num_exp: exp
   28        | num_exp _AROP exp

   29 exp: literal
   30    | _ID
   31    | function_call
   32    | _LPAREN num_exp _RPAREN

   33 literal: _INT_NUMBER
   34        | _UINT_NUMBER

   35 $@3: %empty

   36 function_call: _ID $@3 _LPAREN argument _RPAREN

   37 argument: %empty
   38         | num_exp

   39 if_statement: if_part
   40             | if_part _ELSE statement

   41 @4: %empty

   42 $@5: %empty

   43 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement

   44 rel_exp: num_exp _RELOP num_exp

   45 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 10
_IF (259) 43
_ELSE (260) 40
_RETURN (261) 45
_ID (262) 4 5 9 12 17 26 30 36
_INT_NUMBER (263) 33
_UINT_NUMBER (264) 34
_LPAREN (265) 9 32 36 43
_RPAREN (266) 9 32 36 43
_LBRACKET (267) 14 25
_RBRACKET (268) 14 25
_ASSIGN (269) 26
_SEMICOLON (270) 4 5 17 26 45
_AROP (271) 28
_RELOP (272) 44
_PLUSPLUS (273) 5
_MINUSMINUS (274)
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
globalna_list (23)
    on left: 2 3, on right: 1 3
globalna_var (24)
    on left: 4, on right: 3
inc_statement (25)
    on left: 5, on right: 24
function_list (26)
    on left: 6 7, on right: 1 7
function (27)
    on left: 9, on right: 6 7
$@1 (28)
    on left: 8, on right: 9
type (29)
    on left: 10, on right: 4 9 12 17
parameter (30)
    on left: 11 12, on right: 9
body (31)
    on left: 14, on right: 9
$@2 (32)
    on left: 13, on right: 14
variable_list (33)
    on left: 15 16, on right: 14 16
variable (34)
    on left: 17, on right: 16
statement_list (35)
    on left: 18 19, on right: 14 19 25
statement (36)
    on left: 20 21 22 23 24, on right: 19 40 43
compound_statement (37)
    on left: 25, on right: 20
assignment_statement (38)
    on left: 26, on right: 21
num_exp (39)
    on left: 27 28, on right: 26 28 32 38 44 45
exp (40)
    on left: 29 30 31 32, on right: 27 28
literal (41)
    on left: 33 34, on right: 29
function_call (42)
    on left: 36, on right: 31
$@3 (43)
    on left: 35, on right: 36
argument (44)
    on left: 37 38, on right: 36
if_statement (45)
    on left: 39 40, on right: 22
if_part (46)
    on left: 43, on right: 39 40
@4 (47)
    on left: 41, on right: 43
$@5 (48)
    on left: 42, on right: 43
rel_exp (49)
    on left: 44, on right: 43
return_statement (50)
    on left: 45, on right: 23


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (globalna_list)

    program        go to state 1
    globalna_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: globalna_list . function_list
    3 globalna_list: globalna_list . globalna_var

    _TYPE  shift, and go to state 4

    globalna_var   go to state 5
    function_list  go to state 6
    function       go to state 7
    type           go to state 8


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 type: _TYPE .

    $default  reduce using rule 10 (type)


State 5

    3 globalna_list: globalna_list globalna_var .

    $default  reduce using rule 3 (globalna_list)


State 6

    1 program: globalna_list function_list .
    7 function_list: function_list . function

    _TYPE  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 9
    type      go to state 10


State 7

    6 function_list: function .

    $default  reduce using rule 6 (function_list)


State 8

    4 globalna_var: type . _ID _SEMICOLON
    9 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 11


State 9

    7 function_list: function_list function .

    $default  reduce using rule 7 (function_list)


State 10

    9 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 12


State 11

    4 globalna_var: type _ID . _SEMICOLON
    9 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    _SEMICOLON  shift, and go to state 13

    $default  reduce using rule 8 ($@1)

    $@1  go to state 14


State 12

    9 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 8 ($@1)

    $@1  go to state 14


State 13

    4 globalna_var: type _ID _SEMICOLON .

    $default  reduce using rule 4 (globalna_var)


State 14

    9 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 15


State 15

    9 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 4

    $default  reduce using rule 11 (parameter)

    type       go to state 16
    parameter  go to state 17


State 16

   12 parameter: type . _ID

    _ID  shift, and go to state 18


State 17

    9 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 19


State 18

   12 parameter: type _ID .

    $default  reduce using rule 12 (parameter)


State 19

    9 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 20

    body  go to state 21


State 20

   14 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 15 (variable_list)

    variable_list  go to state 22


State 21

    9 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 9 (function)


State 22

   14 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   16 variable_list: variable_list . variable

    _TYPE  shift, and go to state 4

    $default  reduce using rule 13 ($@2)

    type      go to state 23
    $@2       go to state 24
    variable  go to state 25


State 23

   17 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 26


State 24

   14 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 18 (statement_list)

    statement_list  go to state 27


State 25

   16 variable_list: variable_list variable .

    $default  reduce using rule 16 (variable_list)


State 26

   17 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 28


State 27

   14 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   19 statement_list: statement_list . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 33

    inc_statement         go to state 34
    statement             go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 28

   17 variable: type _ID _SEMICOLON .

    $default  reduce using rule 17 (variable)


State 29

   43 if_part: _IF . _LPAREN @4 rel_exp $@5 _RPAREN statement

    _LPAREN  shift, and go to state 41


State 30

   45 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 46
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 31

    5 inc_statement: _ID . _PLUSPLUS _SEMICOLON
   26 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN    shift, and go to state 50
    _PLUSPLUS  shift, and go to state 51


State 32

   25 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 18 (statement_list)

    statement_list  go to state 52


State 33

   14 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 14 (body)


State 34

   24 statement: inc_statement .

    $default  reduce using rule 24 (statement)


State 35

   19 statement_list: statement_list statement .

    $default  reduce using rule 19 (statement_list)


State 36

   20 statement: compound_statement .

    $default  reduce using rule 20 (statement)


State 37

   21 statement: assignment_statement .

    $default  reduce using rule 21 (statement)


State 38

   22 statement: if_statement .

    $default  reduce using rule 22 (statement)


State 39

   39 if_statement: if_part .
   40             | if_part . _ELSE statement

    _ELSE  shift, and go to state 53

    $default  reduce using rule 39 (if_statement)


State 40

   23 statement: return_statement .

    $default  reduce using rule 23 (statement)


State 41

   43 if_part: _IF _LPAREN . @4 rel_exp $@5 _RPAREN statement

    $default  reduce using rule 41 (@4)

    @4  go to state 54


State 42

   30 exp: _ID .
   36 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 35 ($@3)
    $default  reduce using rule 30 (exp)

    $@3  go to state 55


State 43

   33 literal: _INT_NUMBER .

    $default  reduce using rule 33 (literal)


State 44

   34 literal: _UINT_NUMBER .

    $default  reduce using rule 34 (literal)


State 45

   32 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 56
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 46

   28 num_exp: num_exp . _AROP exp
   45 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 57
    _AROP       shift, and go to state 58


State 47

   27 num_exp: exp .

    $default  reduce using rule 27 (num_exp)


State 48

   29 exp: literal .

    $default  reduce using rule 29 (exp)


State 49

   31 exp: function_call .

    $default  reduce using rule 31 (exp)


State 50

   26 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 59
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 51

    5 inc_statement: _ID _PLUSPLUS . _SEMICOLON

    _SEMICOLON  shift, and go to state 60


State 52

   19 statement_list: statement_list . statement
   25 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32
    _RBRACKET  shift, and go to state 61

    inc_statement         go to state 34
    statement             go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 53

   40 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32

    inc_statement         go to state 34
    statement             go to state 62
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 54

   43 if_part: _IF _LPAREN @4 . rel_exp $@5 _RPAREN statement

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 63
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 64


State 55

   36 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 65


State 56

   28 num_exp: num_exp . _AROP exp
   32 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 66
    _AROP    shift, and go to state 58


State 57

   45 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 58

   28 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    exp            go to state 67
    literal        go to state 48
    function_call  go to state 49


State 59

   26 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   28 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 68
    _AROP       shift, and go to state 58


State 60

    5 inc_statement: _ID _PLUSPLUS _SEMICOLON .

    $default  reduce using rule 5 (inc_statement)


State 61

   25 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 25 (compound_statement)


State 62

   40 if_statement: if_part _ELSE statement .

    $default  reduce using rule 40 (if_statement)


State 63

   28 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 58
    _RELOP  shift, and go to state 69


State 64

   43 if_part: _IF _LPAREN @4 rel_exp . $@5 _RPAREN statement

    $default  reduce using rule 42 ($@5)

    $@5  go to state 70


State 65

   36 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    $default  reduce using rule 37 (argument)

    num_exp        go to state 71
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    argument       go to state 72


State 66

   32 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 32 (exp)


State 67

   28 num_exp: num_exp _AROP exp .

    $default  reduce using rule 28 (num_exp)


State 68

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 26 (assignment_statement)


State 69

   44 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 73
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 70

   43 if_part: _IF _LPAREN @4 rel_exp $@5 . _RPAREN statement

    _RPAREN  shift, and go to state 74


State 71

   28 num_exp: num_exp . _AROP exp
   38 argument: num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 38 (argument)


State 72

   36 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 75


State 73

   28 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 44 (rel_exp)


State 74

   43 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN . statement

    _IF        shift, and go to state 29
    _RETURN    shift, and go to state 30
    _ID        shift, and go to state 31
    _LBRACKET  shift, and go to state 32

    inc_statement         go to state 34
    statement             go to state 76
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 75

   36 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 36 (function_call)


State 76

   43 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement .

    $default  reduce using rule 43 (if_part)
